# CredScan-Agent

./: LOCAL_SETUP.md  README.md  README_Testing.md  main.py  pyproject.toml  replit.md  requirements.txt  run_tests.py  test_agent_system.py  test_results.json  ui.py  web_scraper.py
attached_assets/: Pasted--Academic-Source-Credibility-Checker-Overview-The-Academic-Source-Credibility-Checker-is-a-1753478241970_1753478241971.txt  Pasted--Automated-Testing-Prompt-for-Replit-Objective-Generate-a-test-script-for-the-already-buil-1753493962108_1753493962109.txt
tools/: credibility_scorer.py
