[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "crewai>=0.150.0",
    "crewai-tools>=0.58.0",
    "ddgs>=9.4.3",
    "duckduckgo-search>=8.1.1",
    "openai>=1.97.1",
    "pandas>=2.3.1",
    "plotly>=6.2.0",
    "python-dotenv>=1.1.1",
    "requests>=2.32.4",
    "streamlit>=1.47.1",
    "tabulate>=0.9.0",
    "trafilatura>=2.0.0",
]
